feat(bindings): Added lazy initializers. (#252)
Bindings can specify lazy initializers on a per-key basis.

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
+build/
 out/
 .gradle/
-build/
 *.iml
 *.ipr
 *.iws
 .idea/
+.vscode/
 *.hprof
 *.pyc
 *~
-#*
+\#*
 *.html
 *.log
 *.journal
 *.egg-info/
-venv/
+venv
