experimental(config): Default config from file. (#265)
Binding values can be environment variables.
Environment variables are late binding at the time they are referenced.

This is for an experiment which might not pan out.
Do not rely on this.

--- a/tests/base/bindings_test.config
+++ b/tests/base/bindings_test.config
@@ -2,6 +2,7 @@
 
 read_configuration_bindings = True
 config_location = tests/base/bindings_test
+test_home = $HOME
 
 [tests.base]
 tests_base_param = 1
